# codex-chat-gateway

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  ROADMAP.md  WORKER_PROTOCOL.md
src/codex_chat_gateway/: cli.py  models.py  session_store.py
src/codex_chat_gateway/channel_adapters/: __init__.py  base.py  factory.py  process.py
src/codex_chat_gateway/connectors/whatsapp_baileys/: README.md  package-lock.json  package.json  worker.mjs
src/codex_chat_gateway/runtime_client/: __init__.py  bridge.py
src/codex_chat_gateway/services/: __init__.py  attachment_directives.py  bridge_chat.py  bridge_runtime.py  console.py  echo.py  group_target.py  pending_requests.py
tests/: test_bridge_chat.py  test_cli.py  test_console.py  test_echo.py  test_models.py  test_pending_requests.py  test_process_adapter.py  test_runtime_client.py  test_session_store.py  test_version.py
